# ProjectReminder

./: .coverage  .gitignore  AGENT.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  MVP_TESTING_REPORT.md  NEXT_STEPS.md  PHASE7_KICKOFF.md  PRIORITY_ENHANCEMENT_ANALYSIS.md  README.md  SO_FAR.md  TESTING_INDEX.md  TESTING_SUMMARY.txt  TODOS.md  TODO_TESTS.md  baseproject-update-summary.md  config.json  config_template.json  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  reminders-project-spec.md  run_dev.py  secrets_template.json  serve_ui.py  test-results-phase6.txt  test-summary-phase6.md  test_phase6.py  test_phase6_comprehensive.py  test_phase6_fixed.py
AgentUsage/: README.md  testing_strategies.md
coverage-frontend/: clover.xml  coverage-final.json  lcov.info
docs/: TESTING_SESSION_PROMPT.md  cloudflare_workers_ai_guide.md  phase8.1_architecture.md  phase8.1_cloudflare_ai_research.md  phase8.1_completion.md  phase8.1_edge_cases.md  phase8.1_requirements.md  phase8_architecture.md  phase8_technical_research.md  svelte-migration-guide.md  test_coverage_analysis.md
public/: completed.html  config.json  config.production.json  config_template.json  edit.html  future.html  index.html  login.html  settings.html  upcoming.html
scripts/: README.md  accuracy_analysis.sh  add_examples.py  parse_all.sh  transcribe_all.sh
server/: config.py  database.py  main.py  models.py
tests/: conftest.py  test_api.py  test_e2e_workflows.py  test_error_scenarios.py  test_location.py  test_recurrence.py  test_sync.py
tools/MermaidVisualizer/: .gitignore  AGENT_TOOL_GUIDANCE.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  Todos.md  config.yaml  pyproject.toml  requirements.txt
tools/MermaidVisualizer/input/: rag_pipeline.md
tools/MermaidVisualizer/src/: __init__.py  cli.py  extractor.py  file_handler.py  generator.py  gist_handler.py
tools/MermaidVisualizer/tests/: __init__.py  test_extractor_refactored.py  test_file_handler_refactored.py  test_generator_refactored.py  test_integration.py
tools/MermaidVisualizer/tests/sample_data/: test.md
tools/MermaidVisualizer/web-app/: README.md  index.html  manifest.json  sw.js  test-tailwind.html
tools/MermaidVisualizer/web-app/css/: styles.css
tools/MermaidVisualizer/web-app/icons/: generate-icons.html
tools/MermaidVisualizer/web-app/js/: app.js
workers/: ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  README.md  (+8 more)
(+68 files in other folders)
