[project]
name = "projectreminder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.2.0",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
# PyTest Configuration for ProjectReminder
addopts = "-v --doctest-modules --cov=server --cov-report=term-missing"
testpaths = ["server/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["server"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.ruff]
# Optional: Ruff configuration for code formatting and linting
line-length = 120
target-version = "py311"
